[metadata]
name = cairo-array-utils
version = attr: cairo-array-utils.__version__
description = a set of useful functions utils for manipulating arrays in Cairo lang
author = GUO Yu
author_email = contact@codefordao.org
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/CodeforDAO/cairo-array-utils
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
python_requires = >=3.7
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
codefordao = "*.cairo"